[IMP] CR #19443 - Changes on PO send email template & PO PDF report also solved customer preview error
(cherry picked from commit c2b34d8c9ee95c8e385ee6daa939d33ae096cf17)

--- a/bista_purchase/report/purchase_quotation.xml
+++ b/bista_purchase/report/purchase_quotation.xml
@@ -143,7 +143,7 @@
             <t t-if="not order_line.display_type">
                 <td id="td_default_code" class="text-left"
                     style="border-bottom: 1px solid black;border-right: 1px solid black;border-left: 1px solid black;border-top: 1px solid black;">
-                    <span t-field="order_line.product_id.isbn"/>
+                    <span t-field="order_line.product_id.default_code"/>
                 </td>
                 <td id="product"
                     style="border-bottom: 1px solid black;border-right: 1px solid black;border-top: 1px solid black;">
