--- a/bista_sale/views/sale_templates.xml
+++ b/bista_sale/views/sale_templates.xml
@@ -54,8 +54,6 @@
         </td>
     </template>
 
-    
-
     <template id="account.document_tax_totals">
             <!--
                 Generic template to display tax totals in pdf reports.
@@ -95,15 +93,15 @@
     </template>
 
     <template id="inherit_sale_order_portal_content_totals_table" inherit_id="account.document_tax_totals">
-        <xpath expr="//tr[hasclass('o_total')]" position="after" t-if="o._name == 'sale.order'">
-            <tr t-if="o._name == 'sale.order'">
+        <xpath expr="//tr[hasclass('o_total')]" position="after">
+            <tr t-if="sale_order and sale_order._name == 'sale.order'">
                 <td class="text-muted">Total Saving Amount</td>
                 <td class="text-right">
-                    <span t-if="o._name == 'sale.order'" t-esc="o.saving_amount" t-options="{'widget': 'monetary', 'display_currency': o.pricelist_id.currency_id}"/>
+                    <span t-field="sale_order.saving_amount" t-options="{'widget': 'monetary', 'display_currency': sale_order.pricelist_id.currency_id}"/>
                 </td>
             </tr>
         </xpath>
-    </template> 
+    </template>
 
     <template id="sale_order_portal_template_extend" name="Sales Order Portal Extend Template" inherit_id="sale.sale_order_portal_template">
         <xpath expr="//div[hasclass('o_portal_sale_sidebar')]//li[@t-if='sale_order.amount_undiscounted - sale_order.amount_untaxed &gt; 0.01']/small" position="replace">
@@ -119,5 +117,4 @@
             </small>
         </xpath>
     </template>
-
 </odoo>
