[IMP] CR #19333 - solved issue of refer by & refer org not pulling from lead to sale and from contact to lead

--- a/bista_contact/views/res_partner_views.xml
+++ b/bista_contact/views/res_partner_views.xml
@@ -66,7 +66,7 @@
                 </page>
             </xpath>
             <xpath expr="//notebook" position="inside">
-                <page name="important_details" string="Lead Details">
+                <page name="important_details" string="Source Details">
                     <group>
                         <group>
                             <field name="industry_id" options="{'no_create': True}"/>
