--- a/purchase_pricelist/views/sale_order_views.xml
+++ b/purchase_pricelist/views/sale_order_views.xml
@@ -2,10 +2,14 @@
 <odoo>
     <record model="ir.ui.view" id="view_order_form_inherit">
         <field name="model">sale.order</field>
-        <field name="inherit_id" ref="sale.view_order_form" />
+        <field name="inherit_id" ref="sale_margin.sale_margin_sale_order_line_form" />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='pricelist_id']" position="attributes">
                 <attribute name="domain">[('used_for', '=', 'sale'), ('company_id', 'in', [company_id, False])]</attribute>
+            </xpath>
+            <xpath expr="//page/field[@name='order_line']/tree/field[@name='purchase_price']" position="after">
+                <field name="applied_product_pricelist" invisible="1"/>
+                <button type="object" name="action_update_product_cost" icon="fa-refresh text-primary" attrs="{'invisible': [('applied_product_pricelist', '=', True)]}" class="text-danger"/>
             </xpath>
         </field>
     </record>
