--- a/purchase_pricelist/views/sale_order_views.xml
+++ b/purchase_pricelist/views/sale_order_views.xml
@@ -7,10 +7,10 @@
             <xpath expr="//field[@name='pricelist_id']" position="attributes">
                 <attribute name="domain">[('used_for', '=', 'sale'), ('company_id', 'in', [company_id, False])]</attribute>
             </xpath>
-            <xpath expr="//page/field[@name='order_line']/tree/field[@name='purchase_price']" position="after">
+            <!-- <xpath expr="//page/field[@name='order_line']/tree/field[@name='purchase_price']" position="after">
                 <field name="applied_product_pricelist" invisible="1"/>
                 <button type="object" name="action_update_product_cost" icon="fa-refresh text-primary" attrs="{'invisible': [('applied_product_pricelist', '=', True)]}" class="text-danger"/>
-            </xpath>
+            </xpath> -->
         </field>
     </record>
 </odoo>
