--- a/bista_purchase/report/account_move.xml
+++ b/bista_purchase/report/account_move.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <template id="bista_purchase_report_invoice_document_inherit" inherit_id="account.report_invoice_document">
-
         <xpath expr="//t[@t-call='web.external_layout']" position="attributes">
             <attribute name="t-call">bista_report_header_footer.shipment_custom_header</attribute>
         </xpath>
@@ -26,13 +25,12 @@
                              t-options='{"widget": "contact", "fields": ["address","name","phone"], "no_marker": True, "phone_icons": True}'/>
                     </t>
                     <div t-if="o.partner_id.vat" class="mt16">
-                        <t t-if="o.company_id.account_fiscal_country_id.vat_label"
-                           t-esc="o.company_id.account_fiscal_country_id.vat_label" id="inv_tax_id_label"/>
+                        <span t-if="o.company_id.account_fiscal_country_id.vat_label"
+                           t-field="o.company_id.account_fiscal_country_id.vat_label" id="inv_tax_id_label"/>
                         <t t-else="">Tax ID</t>:
                         <span t-field="o.partner_id.vat"/>
                     </div>
                 </div>
-                <!--                <t t-if="o.partner_shipping_id and (o.partner_shipping_id != o.partner_id)">-->
                 <t t-set="information_block" >
                     <t t-if="o.move_type == 'out_invoice'">
                     <div name="shipping_address_block">
@@ -61,70 +59,46 @@
                     <h2 t-if="o.move_type == 'out_refund'">Credit Note</h2>
                     <h2 t-if="o.move_type == 'in_refund'">Vendor Credit Note</h2>
                     <h2 t-if="o.move_type == 'in_invoice'">Vendor Bill</h2>
-                    <!--                    <h2 t-if="o.name != '/'" t-field="o.name"/>-->
                     <h2>
-                        <strong>
-                            <t t-esc="o.name"/>
-                        </strong>
+                        <strong><span t-field="o.name" /></strong>
                     </h2>
-                    <strong t-if="o.state == 'posted'">Date:
-                        <t t-esc="o.invoice_date" t-options='{"widget": "date"}'/>
+                    <strong t-if="o.state == 'posted'">
+                        Date:
+                        <span t-field="o.invoice_date" t-options='{"widget": "date"}'/>
                     </strong>
                     <br/>
                 </t>
                 <t t-set="custom_information_block">
                     <t t-if="doc_model == 'account.move' and o.move_type in ['out_invoice', 'out_refund', 'in_invoice', 'in_refund']">
-                        <t t-if="o.move_type == 'out_invoice'">
-                            <strong>SO #:</strong>
-                            <t t-esc="o.invoice_origin"/>
-                            <br/>
-                        </t>
-                        <t t-if="o.move_type == 'in_invoice'">
-                            <strong>PO #:</strong>
-                            <t t-esc="o.invoice_origin"/>
-                            <br/>
-                        </t>
-<!--                        <t t-foreach="request.env['sale.order'].sudo().search([('name', '=', o.invoice_origin)])"-->
-<!--                           t-as="sale">-->
-<!--                            <strong>Order Date:</strong>-->
-<!--                            <t t-esc="sale.date_order" t-options='{"widget": "date"}'/>-->
-<!--                            <br/>-->
-<!--                        </t>-->
                         <t t-foreach="request.env['purchase.order'].sudo().search([('name', '=', o.invoice_origin)])"
                            t-as="purchase">
                             <div class="text-danger">
                                 <strong>Order Arrive By Date:</strong>
-                                <t t-esc="context_timestamp(purchase.date_order).strftime('%m/%d/%Y, %H:%M:%S')"/>
+                                <span t-field="purchase.date_order" />
                                 <br/>
                             </div>
                         </t>
                         <t t-if="o.move_type == 'out_invoice' and o.state == 'posted' and o.state in ['posted']">
                             <strong>Invoice Date:</strong>
-                            <t t-esc="o.invoice_date" t-options='{"widget": "date"}'/>
+                            <span t-field="o.invoice_date" t-options='{"widget": "date"}' />
                             <br/>
                         </t>
                         <t t-if="o.move_type == 'out_invoice' and o.state == 'posted'">
                             <strong>Invoice Due Date:</strong>
-                            <t t-esc="o.invoice_date_due" t-options='{"widget": "date"}'/>
+                            <span t-field="o.invoice_date_due" t-options='{"widget": "date"}'/>
                             <br/>
                         </t>
                         <t t-if="o.move_type == 'in_invoice' and o.state == 'posted'">
                             <strong>Bill Date:</strong>
-                            <t t-esc="o.invoice_date_due" t-options='{"widget": "date"}'/>
+                            <span t-field="o.invoice_date_due" t-options='{"widget": "date"}'/>
                             <br/>
                         </t>
-                        <strong>Payment Status :</strong>
-                        <t t-esc="o.payment_state"/>
-                        <br/>
                         <strong>BookPal Account # :</strong>
-                        <t t-esc="428475"/>
+                        <span t-field="o.partner_id.account_number" />
                         <br/>
                         <strong>Client PO Number:</strong>
-                        <t t-esc="o.sale_order_id.client_order_ref"/>
+                        <span t-field="o.sale_order_id.client_order_ref"/>
                         <br/>
-<!--                        <strong>Payment Terms:</strong>-->
-<!--                        <t t-esc="o.invoice_payment_term_id.name"/>-->
-<!--                        <br/>-->
                     </t>
                 </t>
             </div>
@@ -235,7 +209,7 @@
                 </t>
                 <td t-attf-class="text-left {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}"
                     style="display:none !important;">
-                    <span t-esc="', '.join(map(lambda x: (x.description or x.name), line.tax_ids))" id="line_tax_ids"/>
+                    <span t-out="', '.join(map(lambda x: (x.description or x.name), line.tax_ids))" id="line_tax_ids"/>
                 </td>
 
                 <t t-if="o.move_type == 'out_invoice'">
@@ -246,113 +220,6 @@
                     </td>
                 </t>
             </t>
-        </xpath>
-        <xpath expr="//table[@name='invoice_line_table']" position="after">
-            <!-- <div>
-                <table style="border: 1px solid black; margin-left: auto; width:35%; height:150px; font-size:14px;">
-                    <t t-if="o.move_type == 'in_invoice'">
-                        <tr class="border-black o_subtotal">
-                            <td style="border-left: 1px solid black;width:57.16%; font-size: 15px; padding-left: 10px;">
-                                <strong>Total W/D</strong>
-                            </td>
-                            <td class="text-right"
-                                style=" border-left: 1px solid black;  margin: auto;" >
-                                <t t-foreach="request.env['purchase.order'].sudo().search([('name', '=', o.invoice_origin)])"
-                                   t-as="purchase">
-                                    <t t-esc="purchase.without_disc_amount_untaxed"
-                                       t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
-                                </t>
-                            </td>
-                        </tr>
-                        <tr class="border-black o_subtotal">
-                            <td style="border-left: 1px solid black; padding-left:10px;">
-                                <strong>Discount</strong>
-                            </td>
-                            <td class="text-right" style="padding-right:8px;border-left: 1px solid black;border-right: 1px solid black;">
-                                <strong t-esc="o.invoice_line_ids.purchase_order_id.total_discount_amount"
-                                      t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
-                            </td>
-                        </tr>
-                        <tr class="border-black o_subtotal">
-                            <td style="padding-left:10px; ">
-                                <strong>Subtotal</strong>
-                            </td>
-                            <td class="text-right" style="border-left: 1px solid black;">
-                                <strong t-field="o.amount_untaxed"/>
-                            </td>
-                        </tr>
-                        <tr class="border-black o_subtotal">
-                            <td style="padding-left:10px;">
-                                <strong class="text-right">Tax</strong>
-                            </td>
-                            <td class="text-right" style="border-left: 1px solid black;">
-                                <strong t-field="o.amount_tax"/>
-                            </td>
-                        </tr>
-                        <tr class="border-black o_subtotal">
-                            <td style="padding-left:10px;">
-                                <strong class="text-right">Shipping</strong>
-                            </td>
-                            <td class="text-right" style="border-left: 1px solid black;">
-                                <strong t-esc="0.0" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td style="border-top: 1px solid black; border-left: 1px solid black; border-right: 1px solid black; padding-left:10px;">
-                                <strong class="border-black o_subtotal;text-right">Total Due</strong>
-                            </td>
-                            <td style="border-top: 1px solid black; padding-left:10px;"
-                                class="text-right">
-                                <strong t-field="o.amount_total"/>
-                            </td>
-                        </tr>
-                    </t>
-                    <t t-if="o.move_type == 'out_invoice'">
-                        <tr class="border-black o_subtotal">
-                            <td style="padding-left:10px; width:57.16%; font-size: 15px;">
-                                <strong>Subtotal</strong>
-                            </td>
-                            <td class="text-right" style="border-left: 1px solid black; padding-right:8px;">
-                                <strong t-field="o.amount_untaxed"/>
-                            </td>
-                        </tr>
-                        <tr class="border-black o_subtotal">
-                            <td style="padding-left:10px;">
-                                <strong class="text-right">Tax</strong>
-                            </td>
-                            <td class="text-right" style="border-left: 1px solid black; padding-right:8px;">
-                                <strong t-field="o.amount_tax"/>
-                            </td>
-                        </tr>
-                        <tr class="border-black o_subtotal">
-                            <td style="padding-left:10px;">
-                                <strong class="text-right">Shipping</strong>
-                            </td>
-                            <td class="text-right" style="border-left: 1px solid black; padding-right:8px;">
-                                <strong t-esc="0.0" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td style="border-top: 1px solid black; border-left: 1px solid black; border-right: 1px solid black; padding-left:10px;">
-                                <strong class="border-black o_subtotal;text-right">Paid</strong>
-                            </td>
-                            <td style="border-top: 1px solid black; padding-left:10px;padding-right:8px;"
-                                class="text-right">
-                                <strong t-field="o.amount_paid"/>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td style="border-top: 1px solid black; border-left: 1px solid black; border-right: 1px solid black; padding-left:10px;">
-                                <strong class="border-black o_subtotal;text-right">Total Due</strong>
-                            </td>
-                            <td style="border-top: 1px solid black; padding-left:10px;padding-right:8px;"
-                                class="text-right">
-                                <strong t-field="o.amount_total"/>
-                            </td>
-                        </tr>
-                    </t>
-                </table>
-            </div> -->
         </xpath>
         <xpath expr="//p[@name='payment_term']" position="before">
             <div class="mt-5 mx-0" t-if="o.invoice_pick_note">
