--- a/bista_purchase/report/account_move.xml
+++ b/bista_purchase/report/account_move.xml
@@ -179,11 +179,12 @@
                 <td class="text-center"
                     style="border-bottom: 1px solid black;border-right: 1px solid black;border-top: 1px solid black; ">
                     <span t-field="line.quantity"/>
+                    <span t-field="line.product_uom_id"/>
                 </td>
                 <t t-if="o.move_type == 'out_invoice'">
-                    <td class="text-center" name="td_cover"
+                    <td class="text-right" name="td_cover"
                         style="border-bottom: 1px solid black;border-right: 1px solid black;border-top: 1px solid black;">
-                        <span t-field="line.sale_line_ids.discounted_price" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
+                        <span t-field="line.quote_price" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                     </td>
                 </t>
                 <t t-if="o.move_type == 'in_invoice'">
