[IMP] CR #19659 - Discount field visible without decimal in SO PDF & customer preview
(cherry picked from commit ec42647e8b7db0fd357a9536df10a9150e6cf03e)

--- a/bista_sale/views/sale_templates.xml
+++ b/bista_sale/views/sale_templates.xml
@@ -52,6 +52,9 @@
             <br/>
             <span t-field="line.picking_note"/>
         </td>
+        <xpath expr="//td[@t-if='display_discount']//t" position="replace">
+            <t t-esc="round(line.discount)"/>%
+        </xpath>
     </template>
 
     <template id="account.document_tax_totals">
