--- a/bista_sale/report/sale.xml
+++ b/bista_sale/report/sale.xml
@@ -76,9 +76,7 @@
                     <h3 t-if="o.state in ['draft','sent','quote_approval','quote_confirm']">Quotation</h3>
                     <h3 t-if="o.state == 'cancel'">Cancelled Sale Quotation/Order</h3>
                     <h4>
-                        <strong>
-                            <t t-esc="o.name"/>
-                        </strong>
+                        <strong><span t-field="o.name" /></strong>
                     </h4>
                     <t t-if="doc.state in ['draft','sent','quote_approval','quote_confirm']">
                         <span t-field="o.date_order" t-options="{'widget': 'date'}"/>
@@ -153,13 +151,13 @@
                             <br/>
                         </t>
                         <strong>Quoted By:</strong>
-                        <t t-esc="o.user_id.name"/>
+                        <span t-field="o.user_id.name"/>
                         <br/>
                         <strong>Email:</strong>
-                        <t t-esc="o.user_id.email"/>
+                        <span t-field="o.user_id.email"/>
                         <br/>
                         <strong>Phone:</strong>
-                        <t t-esc="o.user_id.phone"/>
+                        <span t-field="o.user_id.phone"/>
                         <br/>
                     </div>
                 </t>
@@ -271,7 +269,7 @@
                     </span>
                 </td>
                 <td name="td_discount" class="text-center">
-                    <span t-field="line.discount"/>%
+                    <span t-out="round(line.discount)"/>%
                 </td>
                 <td t-if="line_taxes" name="td_taxes" class="text-center" style="display:none !important;">
                     <span t-esc="', '.join(map(lambda x: (x.name), line.tax_id))"/>
@@ -349,54 +347,6 @@
                                         t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
                         </div>
                     </div>
-                   <!--  <table class="table">
-                        <tr>
-                            <td class="text-left">
-                                <span>Subtotal</span>
-                            </td>
-                            <td class="text-right">
-                                <span t-field="doc.amount_untaxed"  t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
-                            </td>
-                        </tr>
-                        <tr t-if="doc.amount_tax">
-                            <td class="text-left">
-                                <span class="text-right">Tax</span>
-                            </td>
-                            <td class="text-right">
-                                <span t-field="doc.amount_tax" t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
-                            </td>
-                        </tr>
-                        <tr t-if="doc.carrier_id">
-                            <td class="text-left">
-                                <t t-if="doc.carrier_id">
-                                    <span class="text-left">Shipping</span>
-                                    (<span style="font-size:14px; color: black;" t-field="doc.carrier_id"/>)
-                                </t>
-                            </td>
-                            <td class="text-right">
-                                <t t-esc="sum([line.price_total for line in doc.order_line if line.is_delivery])" t-if="doc.carrier_id"
-                                   t-options='{"widget": "monetary", "display_currency": doc.currency_id}'>
-                                </t>
-                            </td>
-                        </tr>
-                        <tr >
-                            <td class="text-left">
-                                <strong class="border-black o_subtotal;text-right">Total</strong>
-                            </td>
-                            <td class="text-right">
-                                <strong t-field="doc.amount_total" t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="text-left">
-                                <span class="o_subtotal;text-right text-muted">Total Savings</span>
-                            </td>
-                            <td class="text-right">
-                                <span t-esc="sum((line.product_uom_qty*line.price_unit)-line.price_subtotal for line in doc.order_line)"
-                                        t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
-                            </td>
-                        </tr>
-                    </table> -->
                 </div>
             </div>
             <br/><br/>
