--- a/bigcommerce_odoo_integration/views/bigcommerce_store_configuration_view.xml
+++ b/bigcommerce_odoo_integration/views/bigcommerce_store_configuration_view.xml
@@ -156,6 +156,8 @@
                     <group>
                         <group>
                             <field name="warehouse_id" required="1"/>
+                            <field name="last_modification_date"/>
+                            <field name="from_order_date" />
                         </group>
                     </group>
                     <div class="row mt16 o_settings_container">
