[IMP]Updated bigcommerce cron issue and date issue.
(cherry picked from commit ce063aa7aba938de2c7b75ab5856d2ca78964881)

--- a/bigcommerce_odoo_integration/views/bigcommerce_store_configuration_view.xml
+++ b/bigcommerce_odoo_integration/views/bigcommerce_store_configuration_view.xml
@@ -156,8 +156,8 @@
                     <group>
                         <group>
                             <field name="warehouse_id" required="1"/>
-                            <field name="last_modification_date"/>
-                            <field name="from_order_date" />
+                            <field name="last_modification_date" string="From Date"/>
+                            <field name="from_order_date" string="To Date"/>
                         </group>
                     </group>
                     <div class="row mt16 o_settings_container">
